--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,8 +24,10 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+
     -->
-    <title>React App</title>
+    <link href="http://fonts.cdnfonts.com/css/breaking-bad" rel="stylesheet">
+    <title>Breaking Bad App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
